[package]
name = "ic-rusqlite-wrapper-backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.18.5"
serde = "1.0.164"
serde_json = "1.0.142"
hex = "0.4.3"

ic-rusqlite = {git = "https://github.com/wasm-forge/ic-rusqlite.git", rev = "038ee4552b5dc4da0d903b9c5ae5ca5e013c7c9a"}
